[gd_scene load_steps=2 format=3 uid="uid://bfincqp3jdur3"]

[ext_resource type="Script" path="res://main_menu/MainTabContainer.gd" id="1_6nows"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainTabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tabs_visible = false
script = ExtResource("1_6nows")

[node name="Main" type="Panel" parent="MainTabContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="MainTabContainer/Main"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 201.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Super Awesome Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MainTabContainer/Main"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainTabContainer/Main/CenterContainer"]
offset_left = 523.0
offset_top = 238.0
offset_right = 629.0
offset_bottom = 409.0

[node name="NewGameButton" type="Button" parent="MainTabContainer/Main/CenterContainer/VBoxContainer"]
offset_right = 106.0
offset_bottom = 31.0
disabled = true
text = "New Game"

[node name="SettingButton" type="Button" parent="MainTabContainer/Main/CenterContainer/VBoxContainer"]
offset_top = 35.0
offset_right = 106.0
offset_bottom = 66.0
text = "Settings
"

[node name="CardLibraryButton" type="Button" parent="MainTabContainer/Main/CenterContainer/VBoxContainer"]
offset_top = 70.0
offset_right = 106.0
offset_bottom = 101.0
text = "Card Library"

[node name="DeckBuilderButton" type="Button" parent="MainTabContainer/Main/CenterContainer/VBoxContainer"]
offset_top = 105.0
offset_right = 106.0
offset_bottom = 136.0
text = "Deck Builder"

[node name="DevButton" type="Button" parent="MainTabContainer/Main/CenterContainer/VBoxContainer"]
offset_top = 140.0
offset_right = 106.0
offset_bottom = 171.0
text = "Dev  Menu"

[node name="Settings" type="Panel" parent="MainTabContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Card Library" type="Panel" parent="MainTabContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Deck Builder" type="Panel" parent="MainTabContainer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Dev Menu" type="Panel" parent="MainTabContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="MainTabContainer/Dev Menu"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 225.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Development Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MainTabContainer/Dev Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainTabContainer/Dev Menu/CenterContainer"]
offset_left = 522.0
offset_top = 291.0
offset_right = 630.0
offset_bottom = 357.0

[node name="DevSceneButton" type="Button" parent="MainTabContainer/Dev Menu/CenterContainer/VBoxContainer"]
offset_right = 108.0
offset_bottom = 31.0
text = "Dev Level"

[node name="DevBackButton" type="Button" parent="MainTabContainer/Dev Menu/CenterContainer/VBoxContainer"]
offset_top = 35.0
offset_right = 108.0
offset_bottom = 66.0
text = "Back to Main"

[connection signal="pressed" from="MainTabContainer/Main/CenterContainer/VBoxContainer/SettingButton" to="MainTabContainer" method="_on_setting_button_pressed"]
[connection signal="pressed" from="MainTabContainer/Main/CenterContainer/VBoxContainer/CardLibraryButton" to="MainTabContainer" method="_on_card_library_button_pressed"]
[connection signal="pressed" from="MainTabContainer/Main/CenterContainer/VBoxContainer/DeckBuilderButton" to="MainTabContainer" method="_on_deck_builder_button_pressed"]
[connection signal="pressed" from="MainTabContainer/Main/CenterContainer/VBoxContainer/DevButton" to="MainTabContainer" method="_on_dev_button_pressed"]
[connection signal="pressed" from="MainTabContainer/Dev Menu/CenterContainer/VBoxContainer/DevSceneButton" to="MainTabContainer" method="_on_dev_scene_button_pressed"]
[connection signal="pressed" from="MainTabContainer/Dev Menu/CenterContainer/VBoxContainer/DevBackButton" to="MainTabContainer" method="_on_dev_back_button_pressed"]
